<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.adam.app.galaga.engine.Direction" />
        <variable
            name="viewModel"
            type="com.adam.app.galaga.viewmodel.GameViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="?attr/colorSurface">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text='@{@string/galaga_game_score(viewModel.score)}'
            android:textColor="?attr/colorOnSurface"
            android:textAppearance="?attr/textAppearanceDisplayLarge"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Score"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text='@{viewModel.remainingTime}'
            android:textColor="?attr/colorError"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            android:textStyle="bold"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Time: 60s" />

        <com.adam.app.galaga.ui.game.GameSurfaceView
            android:id="@+id/game_surface_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/tv_score"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/control_guideline"
            app:layout_constrainedHeight="true"/>

        <LinearLayout
            android:id="@+id/ll_level_transition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone"
            app:gameState="@{viewModel.currentState}"
            app:layout_constraintTop_toTopOf="@id/game_surface_view"
            app:layout_constraintBottom_toBottomOf="@id/game_surface_view"
            app:layout_constraintStart_toStartOf="@id/game_surface_view"
            app:layout_constraintEnd_toEndOf="@id/game_surface_view">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text='@{viewModel.currentLevelTitle}'
                android:textColor="?attr/colorPrimary"
                android:textAppearance="?attr/textAppearanceDisplayMedium"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                tools:text="title"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/galaga_game_level_cleared"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:textAppearance="?attr/textAppearanceTitleLarge"
                android:letterSpacing="0.2" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_next_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text='@{@string/galaga_game_next_level(viewModel.currentLevelData + 1)}'
                android:textColor="?attr/colorSecondary"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                tools:text="Next"/>
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/control_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.60" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/control_panel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/control_guideline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_fire"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:onTouchFire="@{viewModel}"
                app:backgroundTint="?attr/colorError"
                android:src="@drawable/ic_fire"
                app:tint="?attr/colorOnError"
                app:fabCustomSize="80dp"
                android:elevation="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/shape_circle"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_up"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="80dp"
                android:layout_height="0dp"
                android:text="@string/galaga_dir_up"
                android:textSize="28sp"
                app:onTouchDirection="@{viewModel}"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:layout_marginBottom="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/btn_fire"
                app:layout_constraintEnd_toEndOf="@+id/btn_fire"
                app:layout_constraintStart_toStartOf="@+id/btn_fire"
                app:shapeAppearanceOverlay="@null"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_down"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="80dp"
                android:layout_height="0dp"
                android:text="@string/galaga_dir_down"
                android:textSize="28sp"
                app:onTouchDirection="@{viewModel}"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:layout_marginTop="0dp"
                app:layout_constraintTop_toBottomOf="@+id/btn_fire"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/btn_fire"
                app:layout_constraintStart_toStartOf="@+id/btn_fire"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_left"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:text="@string/galaga_dir_left"
                android:textSize="28sp"
                app:onTouchDirection="@{viewModel}"
                android:insetLeft="0dp"
                android:insetRight="0dp"
                android:layout_marginEnd="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/btn_fire"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_fire"
                app:layout_constraintTop_toTopOf="@+id/btn_fire"
                app:shapeAppearanceOverlay="@null"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_right"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:text="@string/galaga_dir_right"
                android:textSize="28sp"
                app:onTouchDirection="@{viewModel}"
                android:insetLeft="0dp"
                android:insetRight="0dp"
                android:layout_marginStart="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/btn_fire"
                app:layout_constraintStart_toEndOf="@+id/btn_fire"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_fire"
                app:shapeAppearanceOverlay="@null" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
